missing overflow:hidden for datepicker bleeding issue

--- a/public/css/components.css
+++ b/public/css/components.css
@@ -241,6 +241,7 @@
  */
 .order-params-bar {
   position: relative; /* So datepicker doesn't bleed */
+  overflow: hidden;
   display: table;
   width: 100%;
   margin: 0 auto;
